# terraform-provider-unarchive

./: .goreleaser.yml  LICENSE  Makefile  README.en.md  README.md  go.mod  go.sum  main.go
.circleci/: config.yml
.gitee/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_Report.yml
docs/: index.md
docs/data-sources/: file.md
example/: main.tf  prepare.sh
examples/: prepare.sh  provider.tf  targz.tf  zip.tf
internal/unarchive/: common.go  config.go  extractInfo.go  file_data_source.go  file_data_source_test.go  patterns.go  provider.go  unarchive_data_source_model.go  zip_file.go  zip_file_data_source.go  zip_file_data_source_test.go  zip_file_test.go
internal/unarchive/common/: patterns.go  patterns_test.go
internal/unarchive/extract/: config.go  config_test.go  extract.go  extract_test.go  handler.go  handler_test.go  info.go  info_test.go  register.go  tar.go  tar_test.go  targz.go  targz_test.go  unknown_handler.go  zip.go  zip_test.go
internal/unarchive/model/: unarchive_data_source_model.go
internal/unarchive/vali-helper-master/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
internal/unarchive/vali-helper-master/.circleci/: config.yml
internal/unarchive/vali-helper-master/src/vali/: __init__.py  helper.py  validation.py
internal/unarchive/vali-helper-master/src/vali/tests/: test_helper.py
internal/unarchive/validator/: type_handler_validator.go
templates/data-sources/: file.md.tmpl
unarchive/: provider.go  zip_file_data_source.go  zip_file_data_source_test.go
